testsuite/tests/contrib/lkt_semantic/cast/test.lkt
class RootNode implements Node[RootNode] {}
class ChildNode : RootNode {}
class Children : ASTList[RootNode, ChildNode] {}

a: RootNode
b: ChildNode = a.as[ChildNode]
@invalid c: Int = a.as[ChildNode]
@invalid d: Int = a.as[Int]
e: Children = a.as[Children]
@invalid f: Int = b.as[Children]
